# eren

./: README.md  mkdocs.yml  pyproject.toml
docs/: gen_ref_pages.py
eren/: __init__.py  fs.py
tests/: spark.py  test_fs.py  test_public_interface.py
